# internal/handlers/auth/login.go
@@ -9,12 +9,20 @@ import (
 	"gorm.io/gorm"
 
 	"github.com/lunarr-app/lunarr-go/internal/db"
-	"github.com/lunarr-app/lunarr-go/internal/models"
 	"github.com/lunarr-app/lunarr-go/internal/util"
 )
 
+// @Summary Login
+// @Description Login
+// @Tags auth
+// @Accept json
+// @Produce json
+// @Param loginReq body UserLogin true "Login Request"
+// @Success 200 {object} UserLoginResponse
+// @Failure 400 {object} ErrorResponse
+// @Router /auth/login [post]
 func LoginHandler(c *fiber.Ctx) error {
-	var loginReq models.UserLogin
+	var loginReq UserLogin
 	if err := c.BodyParser(&loginReq); err != nil {
 		return c.Status(http.StatusBadRequest).JSON(fiber.Map{
 			"status":  http.StatusText(http.StatusBadRequest),
